--- a/css/estilos-index.css
+++ b/css/estilos-index.css
@@ -139,6 +139,7 @@ main{
     margin: auto;
     padding: 40px;
     text-align: center;
+    
 }
 
 .content-item3 h4{
@@ -163,6 +164,7 @@ main{
 .content-five{
     width: 100%;
     background: #6C132B;
+    box-sizing: border-box;
 }
 
 .content-item4{
@@ -173,6 +175,7 @@ main{
     color: white;
     text-align: center;
 }
+
 
 .content-item4 h4{
     font-size: 20px;
@@ -185,8 +188,8 @@ main{
 
 /*Boton Enviar*/
 #guardar{
-    margin-left: 609px;
-    margin-bottom: 50px;
+    margin-top: 25px;
+    margin-bottom: 25px;
     border-left-width: 1px;
     border-left-style: solid;
     border: none; /* Remove borders */
@@ -198,3 +201,17 @@ main{
 
     
 }
+
+
+#loader{
+    display:block;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(128,128,128,0.7);
+    visibility: hidden;
+}
+
+
