--- a/css/footer.css
+++ b/css/footer.css
@@ -14,3 +14,24 @@ footer{
     color: #eb797b;
     cursor: pointer;
 }
+
+.login-box{
+    width: 320px;
+    height: 535px;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+}
+.avatar{
+    width: 110px;
+    height: 110px;
+    border-radius: 60%;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+}
