--- a/style.css
+++ b/style.css
@@ -77,3 +77,14 @@ h1{
 {
     color: #39dc79;
 }
+
+#loader{
+    display:block;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(128,128,128,0.7);
+    visibility: hidden;
+}
